--- a/templates/barber/profile.html.twig
+++ b/templates/barber/profile.html.twig
@@ -477,7 +477,7 @@
                         </div>
                         <div class="card-body p-4">
                             {{ form_start(form, {'attr': {'class': 'user-profile-form', 'novalidate': 'novalidate', 'id': 'profileForm'}}) }}
-                            {{ form_row(form._token) }}
+                            {{ form_widget(form._token) }}
 
                             <div class="row">
                                 <!-- Email -->
